@@ -56,7 +56,7 @@ WriterInfoListener::writer_removed(WriterInfo& )
 WriterInfo::WriterInfo()
   : last_liveliness_activity_time_(ACE_OS::gettimeofday()),
   seen_data_(false),
-  historic_samples_timer_(-1),
+  historic_samples_timer_(NOT_WAITING),
   state_(NOT_SET),
   reader_(0),
   writer_id_(GUID_UNKNOWN),
@@ -73,10 +73,7 @@ WriterInfo::WriterInfo(WriterInfoListener*         reader,
                        const ::DDS::DataReaderQos& reader_qos)
   : last_liveliness_activity_time_(ACE_OS::gettimeofday()),
   seen_data_(false),
-  // Only check reader qos, because durable connection depends on it
-  historic_samples_timer_(
-    // Set to non-zero for non-volatile so timer is scheduled
-    reader_qos.durability.kind > DDS::VOLATILE_DURABILITY_QOS ? -1 : 0),
+  historic_samples_timer_(NOT_WAITING),
   state_(NOT_SET),
   reader_(reader),
   writer_id_(writer_id),
